5365 - Treemap fix broken footer text on new theme (added nowrap on footer leading-text)

--- a/src/components/treemap/_treemap.scss
+++ b/src/components/treemap/_treemap.scss
@@ -56,6 +56,10 @@
   margin-top: -28px;
   overflow: hidden;
 
+  .data {
+    white-space: nowrap;
+  }
+
   .label {
     white-space: nowrap;
   }
